<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<resources>-->
<!--    <string name="app_name">house_analysis</string>-->
<!--    <string name="WelcomeTo">Добро пожаловать в</string>-->


<!--    <string name="nameCompany">Электрон</string>-->


<!--    <string name="companyDescription">Приложение для [описание на две-три строки]</string>-->
<!--    <string name="signUp">Зарегистрироваться</string>-->
<!--    <string name="signIn">Войти</string>-->
<!--    <string name="accountLogin">Вход в личный кабинет</string>-->


<!--    &lt;!&ndash;    SIGNUP texts&ndash;&gt;-->

<!--    &lt;!&ndash;    SIGNUP texts&ndash;&gt;-->

<!--    <string name="accountLogup">Регистрация</string>-->
<!--    <string name="textSignup">Зарегистрируйтесь, чтобы рабочий процесс стал комфортным</string>-->
<!--    <string name="name">Имя</string>-->
<!--    <string name="lastname">Фамилия</string>-->
<!--    <string name="datebirth">Дата рождения</string>-->

<!--    &lt;!&ndash;    GENDER&ndash;&gt;-->

<!--    &lt;!&ndash;    GENDER&ndash;&gt;-->

<!--    <string name="gender">Пол</string>-->
<!--    <string-array name="genders">-->
<!--        <item>Мужской</item>-->
<!--        <item>Женский</item>-->
<!--    </string-array>-->

<!--    &lt;!&ndash;    <string name="g_man">Мужской</string>&ndash;&gt;-->
<!--    &lt;!&ndash;    <string name="g_woman">Женский</string>&ndash;&gt;-->

<!--    &lt;!&ndash;    <string name="g_man">Мужской</string>&ndash;&gt;-->
<!--    &lt;!&ndash;    <string name="g_woman">Женский</string>&ndash;&gt;-->


<!--    <string name="phone">Телефон</string>-->
<!--    <string name="errorIfCountryNotCorrect">Номер с кодом города, например +7 999 432 32 32</string>-->
<!--    <string name="email">E-mail</string>-->
<!--    <string name="confirmationWillBeSend">На почту придет ссылка для подтверждения аккаунта</string>-->
<!--    <string name="password">Пароль</string>-->
<!--    <string name="errorOccured">от 8 символов, только латинские буквы и цифры</string>-->
<!--    <string name="confirPassword">Еще раз пароль</string>-->
<!--    <string name="iHave18">Мне есть 18 лет</string>-->
<!--    <string name="acceptTopolicy">Я согласен с <font color='#15499F'>условиями обработки персональных данных</font></string>-->


<!--    <string name="ifUHaveAccount">У вас уже есть профиль?</string>-->

<!--    <string name="forgotPassword">Забыли пароль?</string>-->

<!--    <string name="enterEmailText">Введите e-mail, указанный при регистрации. На почту придет код для восстановления пароля</string>-->
<!--    <string name="restorePassword">Восстановление пароля</string>-->
<!--    <string name="enterCodeText">Введите код, отправленный на e-mail</string>-->
<!--    <string name="codeText">Код</string>-->
<!--    <string name="readyText">Готово</string>-->
<!--    <string name="newPassword">Новый пароль</string>-->
<!--    <string name="enterNewPassword">Введите новый пароль</string>-->
<!--    <string name="validationForPass">от 8 символов, только латинские буквы и цифры</string>-->
<!--    <string name="changePassword">Изменить пароль</string>-->


<!--    <string name="title_activity_sign_up">SignUp</string>-->
<!--    &lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
<!--    <string name="first_fragment_label">First Fragment</string>-->
<!--    <string name="second_fragment_label">Second Fragment</string>-->
<!--    <string name="next">Next</string>-->
<!--    <string name="previous">Previous</string>-->

<!--    <string name="hello_first_fragment">Hello first fragment</string>-->
<!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
<!--    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
<!--    <string name="appVersion">Версия 1.1.1</string>-->
<!--    <string name="textFeedBack">Обратная связь</string>-->
<!--    <string name="textPrivacyPolicy">Политика конфиденциальности</string>-->
<!--    <string name="textTermsUse">Условия использования</string>-->
<!--    <string name="textEstimateApp">Оценить приложение</string>-->
<!--    <string name="textLanguage">Язык</string>-->
<!--    <string name="russianLanguage">Русский</string>-->
<!--    <string name="englishLanguage">English</string>-->
<!--    <string name="belarusianLanguage">Belarusian</string>-->
<!--    <string name="frenchLanguage">French</string>-->
<!--    <string name="germanLanguage">German</string>-->
<!--    <string name="italianLanguage">Italian</string>-->
<!--    <string name="compassText">Геолокация</string>-->
<!--    <string name="aboutAppText">О приложении</string>-->
<!--    <string name="signOutText">Выйти</string>-->
<!--    <string name="uHaveAccount">У вас нет профиля?</string>-->
<!--    <string name="homeBottomNav">Главная</string>-->
<!--    <string name="searchBottomNav">Поиск</string>-->
<!--    <string name="addBottomNav">Добавить</string>-->
<!--    <string name="highlightBottomNav">Выделить</string>-->
<!--</resources>-->

<resources>
    <string name="app_name">house_analysis</string>
    <string name="WelcomeTo">Welcome to</string>


    <string name="nameCompany">Electron</string>


    <string name="companyDescription">Приложение для [описание на две-три строки]</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="accountLogin">Sign in to your personal account</string>


    <!--    SIGNUP texts-->

    <!--    SIGNUP texts-->

    <string name="accountLogup">Sign Up</string>
    <string name="textSignup">Register to make your workflow more comfortable</string>
    <string name="name">Name</string>
    <string name="lastname">Surname</string>
    <string name="datebirth">Date of birth</string>

    <!--    GENDER-->

    <!--    GENDER-->

    <string name="gender">Пол</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--    <string name="g_man">Мужской</string>-->
    <!--    <string name="g_woman">Женский</string>-->

    <!--    <string name="g_man">Мужской</string>-->
    <!--    <string name="g_woman">Женский</string>-->


    <string name="phone">Phone number</string>
    <string name="errorIfCountryNotCorrect">A phone number with the city code, for example +7 999 432 32 32</string>
    <string name="email">E-mail</string>
    <string name="confirmationWillBeSend">You will receive a confirmation link to your email to verify your account</string>
    <string name="password">Password</string>
    <string name="errorOccured">At least 8 characters, using only Latin letters and numbers</string>
    <string name="confirPassword">Confirm password</string>
    <string name="iHave18">I am 18 years old.</string>
    <string name="acceptTopolicy">I agree to the <font color='#15499F'>terms of personal data processing</font></string>


    <string name="ifUHaveAccount">Do you already have a profile?</string>

    <string name="forgotPassword">Forgot your password?</string>

    <string name="enterEmailText">Enter the email address you used to register. You will receive a code to reset your password</string>
    <string name="restorePassword">Password recovery</string>
    <string name="enterCodeText">Enter the code sent to your email</string>
    <string name="codeText">"Code"</string>
    <string name="readyText">"Done"</string>
    <string name="newPassword">"New password"</string>
    <string name="enterNewPassword">"Enter a new password."</string>
    <string name="validationForPass">"Minimum of 8 characters, using only Latin letters and numbers."</string>
    <string name="changePassword">"Change password"</string>


    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appVersion">"Version 1.1.1"</string>
    <string name="textFeedBack">Feedback</string>
    <string name="textPrivacyPolicy">"Privacy policy"</string>
    <string name="textTermsUse">"Terms of use"</string>
    <string name="textEstimateApp">"Rate the app"</string>
    <string name="textLanguage">Language</string>
    <string name="russianLanguage">Russian</string>
    <string name="englishLanguage">English</string>
    <string name="belarusianLanguage">Belarusian</string>
    <string name="frenchLanguage">French</string>
    <string name="germanLanguage">German</string>
    <string name="italianLanguage">Italian</string>
    <string name="compassText">Compass</string>
    <string name="aboutAppText">About the application</string>
    <string name="signOutText">Sign Out</string>
    <string name="uHaveAccount">Don\'t have a profile?</string>
    <string name="homeBottomNav">Home</string>
    <string name="searchBottomNav">Search</string>
    <string name="addBottomNav">Add</string>
    <string name="highlight">Highlight</string>
    <string name="everythingWorkedOut">Everything worked out!</string>
    <string name="activateAccount">You need to activate your account \nby clicking on the link sent to your email in order to gain \naccess to your profile!</string>
    <string name="itsClear">Understood</string>
    <string name="noTasks">No tasks</string>
    <string name="addTasks">Add task lists and track their completion</string>
    <string name="combine">Combine into one floor and entrance.</string>
    <string name="addLabel">Add a label</string>
    <string name="changePriority">Change the priority</string>
    <string name="showOnTheMap">Show on the map</string>
    <string name="setSignal">Set up a signal</string>
    <string name="insert">Insert</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="configure">Configure</string>
    <string name="cancel">Canсel</string>
    <string name="task_list">Task list</string>
</resources>