<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.password.RestorePass">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_drawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="15dp"
        android:paddingStart="20dp"/>

    <TextView
        android:id="@+id/restorePassword"
        android:layout_marginHorizontal="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restorePassword"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        android:textColor="@color/black"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/enterEmailText"
        android:layout_marginHorizontal="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterCodeText"
        app:layout_constraintTop_toBottomOf="@id/restorePassword"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/clear"
        app:boxCornerRadiusTopStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomEnd="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusTopEnd="@dimen/cornerRaduisInput"

        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterEmailText"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/editTextMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/codeText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonEnterCode"
        style="@style/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/readyText"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextMail" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonEnterCode"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Не пришел код?"
            android:textColor="@color/black"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Отправить повторно"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>