<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_drawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="15dp"
        android:paddingStart="20dp"/>

    <TextView
        android:id="@+id/accountLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountLogin"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="10dp"
        android:paddingTop="30dp"/>

    <TextView
        android:id="@+id/ifUHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifUHaveAccount"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/accountLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="10dp"
        android:paddingTop="30dp"/>

    <TextView
        android:id="@+id/ifUHaveTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifUHaveAccountTwo"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/ifUHave"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="10dp"/>

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ifUHaveTwo"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextMail"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/forgotPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"/>

    <Button
        android:id="@+id/buttonSignIn"
        style="@style/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/signIn"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="У вас нет профиля?"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Зарегистрироваться"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>