<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_drawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="15dp"
        android:paddingStart="20dp"/>

    <TextView
        android:layout_marginHorizontal="10dp"
        android:id="@+id/accountLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/accountLogup"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="30dp"/>

    <TextView
        android:id="@+id/ifUHave"
        android:layout_width="290dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        android:text="@string/textSignup"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/accountLogin"
        app:layout_constraintStart_toStartOf="parent"

        android:paddingTop="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/clear"
        app:boxCornerRadiusTopStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomEnd="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusTopEnd="@dimen/cornerRaduisInput"

        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ifUHave"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxCornerRadiusTopStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomEnd="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusTopEnd="@dimen/cornerRaduisInput"

        app:endIconMode="clear_text"
        android:layout_marginTop="@dimen/marginTopForInputs"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTopForInputs"
        app:layout_constraintTop_toBottomOf="@+id/lastname"
        app:layout_constraintLeft_toLeftOf="@+id/lastname"
        app:layout_constraintRight_toRightOf="@+id/lastname"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            app:boxCornerRadiusTopStart="@dimen/cornerRaduisInput"
            app:boxCornerRadiusBottomEnd="@dimen/cornerRaduisInput"
            app:boxCornerRadiusBottomStart="@dimen/cornerRaduisInput"
            app:boxCornerRadiusTopEnd="@dimen/cornerRaduisInput"

            app:endIconMode="custom"
            android:layout_marginTop="@dimen/marginTopForInputs"
            app:endIconDrawable="@drawable/baseline_date_range_24"
            android:id="@+id/dateBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/datebirth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            app:boxCornerRadiusTopStart="@dimen/cornerRaduisInput"
            app:boxCornerRadiusBottomEnd="@dimen/cornerRaduisInput"
            app:boxCornerRadiusBottomStart="@dimen/cornerRaduisInput"
            app:boxCornerRadiusTopEnd="@dimen/cornerRaduisInput"

            app:endIconMode="custom"
            android:layout_marginTop="@dimen/marginTopForInputs"
            app:endIconDrawable="@drawable/baseline_keyboard_arrow_down_24"
            android:id="@+id/gender"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/datebirth">
            <AutoCompleteTextView
                android:id="@+id/autoCompleteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/buttonSignIn"
        style="@style/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="13dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/signIn"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="У вас нет профиля?"
            android:textColor="@color/black"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Зарегистрироваться"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>